--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -11,7 +11,6 @@
   width: 100%;
   height: 90px;
   z-index: 100;
-  background: rgba(255, 255, 255, 0.9);
   box-shadow: 3px 0px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -51,7 +50,7 @@
   height: 90px;
   font-weight: 600;
   color: #222;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 #wrap #header #top_nav ul li a:hover {
@@ -90,7 +89,7 @@
   display: inline-block;
   width: 100%;
   height: 100%;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 300;
   color: #666666;
 }
@@ -634,7 +633,7 @@ a {
 .history-wrap .history .story .table dt {
   font-family: "GmarketSansLight";
   font-weight: bold;
-  font-size: 20px;
+  font-size: 18px;
   color: #222;
   width: 150px;
 }
@@ -642,21 +641,21 @@ a {
 .history-wrap .history .story .table dd {
   font-family: "GmarketSansLight";
   font-weight: bold;
-  font-size: 20px;
+  font-size: 18px;
   color: #222;
   line-height: 50px;
 }
 
 .history-wrap .history h2 {
   color: #222;
-  font-size: 26px;
+  font-size: 22px;
   padding-bottom: 40px;
   border-bottom: 2px solid #222;
 }
 
 .history-wrap .history h4 {
   color: #222;
-  font-size: 22px;
+  font-size: 18px;
   width: 300px;
 }
 
@@ -677,7 +676,7 @@ a {
 }
 
 .content-txt .text-wrap .title h3 {
-  font-size: 56px;
+  font-size: 46px;
   margin-bottom: 50px;
 }
 
@@ -700,7 +699,7 @@ a {
 
 .content-txt .text-wrap .text h4 {
   color: #222;
-  font-size: 26px;
+  font-size: 22px;
   margin-bottom: 30px;
 }
 
@@ -713,6 +712,7 @@ a {
 
 .content-txt .text-wrap .text p b {
   color: #000;
+  font-weight: 900;
 }
 
 .content-txt .video {
@@ -1141,4 +1141,106 @@ a {
 .csr1-wrap .csr1-box3 .box3-img img {
   width: 1000px;
   height: auto;
+}
+
+.csr2-wrap {
+  width: 1440px;
+  margin: 0 auto;
+  padding: 100px 20px 100px 20px;
+}
+
+.csr2-box h2 {
+  font-size: 28px;
+  padding-bottom: 20px;
+  color: #222;
+}
+
+.csr2-box p {
+  font-size: 18px;
+  font-family: "GmarketSansLight";
+  color: #4a4a4a;
+  font-weight: bold;
+}
+
+.csr2-box .csr2-imgbox {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 70px;
+  padding-bottom: 150px;
+}
+
+.csr2-box .csr2-imgbox .csr2-img {
+  text-align: center;
+}
+
+.csr2-box .csr2-imgbox .csr2-img h4 {
+  font-size: 18px;
+  color: #222;
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+
+.csr2-box .csr2-imgbox .csr2-img p {
+  font-size: 16px;
+}
+
+.csr2-box2 .text h2 {
+  font-size: 28px;
+  color: #222;
+  padding-bottom: 20px;
+}
+
+.csr2-box2 .text p {
+  font-family: "GmarketSansLight";
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 130px;
+  line-height: 30px;
+}
+
+.csr2-box2 .text-img {
+  max-width: 1440px;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 100px;
+}
+
+.csr2-box2 .text-img img {
+  max-width: 1000px;
+  width: 100%;
+  height: auto;
+}
+
+.csr2-box2 .type2 p {
+  margin-bottom: 30px;
+}
+
+.csr2-box2 .type2 button {
+  border: 1px solid #222;
+  padding: 20px 10px;
+  background: none;
+  font-size: 16px;
+  font-family: "GmarketSansLight";
+  cursor: pointer;
+}
+
+.csr2-box2 .type2 button:hover {
+  box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
+}
+
+.csr5-imgbox {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: space-between;
+  margin-bottom: 100px;
+}
+
+.csr5-imgbox .csr5-img {
+  width: 380px;
+  margin-top: 50px;
 }
