--- a/asset/scss/company.scss
+++ b/asset/scss/company.scss
@@ -176,14 +176,14 @@
         dt{
           font-family: $fontLight;
           font-weight: bold;
-          font-size: 20px;
+          font-size: $fontSizeNormal;
           color: $fontMain;
           width: 150px;
         }
         dd{
           font-family: $fontLight;
           font-weight: bold;
-          font-size: 20px;
+          font-size: $fontSizeNormal;
           color: $fontMain;
           line-height: 50px;
         }
@@ -191,13 +191,13 @@
     }
     h2{
       color: $fontMain;
-      font-size: 26px;
+      font-size: 22px;
       padding-bottom: 40px;
       border-bottom: 2px solid $fontMain;
     }
     h4{
       color: $fontMain;
-      font-size: 22px;
+      font-size: $fontSizeNormal;
       width: 300px;
     }
   }
@@ -214,7 +214,7 @@
       width: 400px;
       color: $fontMain;
       h3{
-        font-size: $fontSizeSBig;
+        font-size: 46px;
         margin-bottom: 50px;
       }
       p{
@@ -233,7 +233,7 @@
       width: 750px;
       h4{
         color: $fontMain;
-        font-size: 26px;
+        font-size: 22px;
         margin-bottom: 30px;
       }
       p{
@@ -243,6 +243,7 @@
         margin-bottom: 25px;
         b{
           color: #000;
+          font-weight: 900;
         }
       }
     }
