--- a/asset/scss/nav.scss
+++ b/asset/scss/nav.scss
@@ -8,7 +8,7 @@
     width: 100%;
     height: 90px;
     z-index: 100;
-    background: rgba(255, 255, 255, 0.9);
+    // background: rgba(255, 255, 255, 0.9);
     box-shadow: 3px 0px 5px rgba(0, 0, 0, 0.5);
     #top_logo{
       margin-left: 100px;
@@ -38,7 +38,7 @@
             height: 90px;
             font-weight: 600;
             color: $fontMain;
-            font-size: $navMainsize;
+            font-size: $fontSize;
             &:hover{
               color: $navColor;
             }
@@ -73,7 +73,7 @@
                 display: inline-block;
                 width: 100%;
                 height: 100%;
-                font-size: 16px;
+                font-size: 14px;
                 font-weight: 300;
                 color: $fontColorBasic;
               }
