--- a/asset/scss/nav.scss
+++ b/asset/scss/nav.scss
@@ -20,6 +20,7 @@
     }
     //top_menu 구현
     #top_nav{
+      min-width: 700px;
       position: relative;
       height: 90px;
       float: right;
@@ -90,4 +91,8 @@
       }
     }
   }
+}
+
+.header-wrap{
+  min-width: $width;
 }
