--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -275,7 +275,7 @@ a {
 
 .mainbanner {
   position: relative;
-  width: 100%;
+  min-width: 100%;
   height: 100vh;
   overflow: hidden;
 }
@@ -285,8 +285,7 @@ a {
 }
 
 .mainbanner .main-banner video {
-  width: 100%;
-  height: auto;
+  min-width: 100%;
 }
 
 .container {
