--- a/asset/scss/main.scss
+++ b/asset/scss/main.scss
@@ -1,14 +1,13 @@
 //메인페이지
 .mainbanner{
   position: relative;
-  width: 100%;
+  min-width: 100%;
   height: 100vh;
   overflow: hidden;
   .main-banner{
     height: 100%;
     video{
-      width: 100%;
-      height: auto;
+      min-width: 100%;
     }
   }
 }
