--- a/asset/scss/main.scss
+++ b/asset/scss/main.scss
@@ -1,7 +1,7 @@
 //메인페이지
 .mainbanner{
   position: relative;
-  min-width: 100%;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
   .main-banner{
